<resources>
    <string name="app_name">Sapling</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="plant_description">Plant icon corresponding to quality of life </string>
    <string name="quality_of_life_graph_description">Graph tracking quality of life </string>
    <string name="title_activity_display">DisplayActivity</string>

    <string name="display_button_label">Display</string>

    <string name="productivity_label">Productivity</string>
    <string name="happiness_label">Happiness</string>
    <string name="health_label">Health</string>
    <string name="stress_label">Stress</string>

    <string name="prod_stat">4.5</string>
    <string name="happiness_stat">3.8</string>
    <string name="health_stat">4.7</string>
    <string name="stress_stat">4.9</string>

    <string name="metrics_label">Metrics</string>
    <string name="goals_label">Goals</string>
    <string name="today_label">Today\'s Log</string>

    <string name="reset_label">Reset All</string>
    <string name="modify_label">Reset Today\'s Data</string>
    <string name="username_label">Hi </string>
    <string name="birthday_label">Name? </string>
    <string name="username">Jane Doe </string>
    <string name="birthday">01/03/1993</string>
    <string name="end">End</string>

    <string name="sc_qof_title">Quality of Life</string>
    <string name="sc_qof_descr">This plant represents your quality of life.\n
        Watch it grow as you increase positive metrics in your life such as
        health and decrease negative one such as stress.
    </string>

    <string name="sc_graph_title">Metric Graph</string>
    <string name="sc_graph_descr">This graph displays your metric levels over the past week.\n
        You can tap on it to zoom in and swipe across it to move through dates.
    </string>

    <string name="sc_bar_title">Status Bar Graph</string>
    <string name="sc_bar_descr">Look along the bottom of the screen for a summary
        of your latest daily log entry.\n
        For a given day, each metric is measured on a scale of  1 - 7
        (low to high).
    </string>

    <string name="sc_menu_title">Menu Options</string>
    <string name="sc_menu_descr">
        Daily Log \n
        Enter today\'s metric and goal values \n \n
        Display\n
        Graphically display metrics over time \n \n
        Goal Tracking\n
        Remove/add both goals and metrics\n \n
        Settings\n
        Update your user details \n
        \n
      Have fun exploring the Sapling App!
    </string>
</resources>
