<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_back"
    tools:context="cis350.upenn.edu.sapling.MainActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_log"
        android:layout_width="70dp"
        android:layout_height="61dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/homepage_graph"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="7dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="startLogging"
        app:layout_anchorGravity="top|right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/homepage_plant"
        android:layout_width="279dp"
        android:layout_height="219dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/plant_description"
        android:src="@drawable/plant_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <ImageView
        android:id="@+id/homepage_graph"
        android:layout_width="241dp"
        android:layout_height="166dp"
        android:layout_below="@+id/homepage_plant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/quality_of_life_graph_description"
        android:src="@drawable/mock_graph"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/log_summary"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="#E8F1F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="167dp"
        android:layout_height="313dp"
        android:layout_alignEnd="@+id/fab_new_log"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/fab_new_log"
        android:layout_marginTop="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        app:menu_labels_position="left"
        app:menu_openDirection="down">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:onClick="startSettings"
            android:src="@drawable/ic_menu"
            fab:fab_label="Settings"
            fab:fab_size="normal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_logging"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:onClick="startLogging"
            android:src="@drawable/ic_menu"
            fab:fab_label="Daily Log"
            fab:fab_size="normal"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="0dp" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_goaltracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:onClick="startGoalTracking"
            android:src="@drawable/ic_menu"
            fab:fab_label="Goal Tracking"
            fab:fab_size="normal"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="0dp" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:onClick="startDisplay"
            android:src="@drawable/ic_menu"
            app:fab_label="@string/display_button_label"
            app:fab_size="normal"
            app:menu_fab_size="normal"
            app:menu_labels_position="left"
            app:menu_openDirection="up"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </com.github.clans.fab.FloatingActionMenu>

</android.support.constraint.ConstraintLayout>


